@@ -31,6 +31,16 @@ province_event = {
 			name = damietta_foreign_quarter_established
 			duration = -1
 		}
+		owner = {
+			home_trade_node_effect_scope = {
+				add_trade_modifier = {
+					who = FROM
+					key = DAMIETTA_FOREIGN_QUARTER_MODIFIER
+					duration = 9125
+					power = 25
+				}
+			}
+		}
 		FROM = {
 			add_country_modifier = {
 				name = damietta_benefiting_from_foreign_quarter
@@ -39,7 +49,7 @@ province_event = {
 			add_treasury = -200
 		}
 		ai_chance = {
-			factor = 5
+			factor = 25
 			modifier = {
 				factor = 9
 				NOT = {
@@ -55,7 +65,7 @@ province_event = {
 	option = {
 		name = damietta_crusader_states.1.b
 		ai_chance = {
-			factor = 15
+			factor = 75
 		}
 	}
 }
