@@ -1,14 +1,26 @@
 ﻿l_english:
+ #Crusader States
  damietta_crusader_state_foreign_quarters_title:0 "Open Bidding For Foreign Quarters"
  damietta_crusader_state_foreign_quarters_desc:0 "Rescind restrictions on foreign merchants in our cities."
  damietta_crusader_states_foreign_quarters_will_be_enabled:0 "Nations may inquire about opening foreign quarters in our cities."
 
+ #Rahulids
  damietta_rahulids_tame_the_desert_title:0 "Tame the Desert"
  damietta_rahulids_tame_the_desert_desc:0 "Establish a settler bureau focused on taming the Western Desert."
  damietta_rahulids_taming_desert.tt:0 "[Root.Culture.GetName] settlers will be sent to the desert to establish order."
-
+ 
+ #Bulgaria and Voivodes
  damietta_reform_bulgarian_empire_title:0 "Proclaim a New Bulgarian Empire"
  damietta_reform_bulgarian_empire_desc:0 "The time has come. We have conquered the pretenders, and solidified our own rule as the one, true Bulgaria. Let us proclaim a new Tsardom, like those before us!"
 
+ #Damietta Egypt Decision
  damietta_dmi_form_egypt_title:0 "Form Egypt"
  damietta_dmi_form_egypt_desc:0 "By God's light and with His guidance, we have beat back the heathens and conquered Egypt! It is time we solidify our rule as righteous successors to the Egyptian legacy."
+
+ #Papal Decisions
+ damietta_pap_call_for_crusade_against_byz_title:0 "Call for Crusade against Byzantium"
+ damietta_pap_call_for_crusade_against_byz_desc:0 "The Greeks in the East have rejected all efforts for peaceful negotiation. The only method left is the sword. Let us call for a Crusade against the \"Romans,\" so that they may see the will and might of God before them!"
+
+ damietta_pap_demand_byz_return_land_title:0 "Demand Return of Conquered Land from Byzantium"
+ damietta_pap_demand_byz_return_land_desc:0 "The Greeks have conquered land from good Catholics. If we let this stand without challenge, their campaign of unjust conquest will only continue. Let us demand they return the land they have so unjustly stolen."
+ damietta_pap_not_demanded_land_recently.tt:0 "Has not made this demand in the past 10 years"
