@@ -30,3 +30,9 @@
  damietta_rum_stability_modifier_neg_1:0 "Seljuk Stability"
  #damietta_rum_stability_modifier_neg_2:0 "Seljuk Stability"
  #damietta_rum_stability_modifier_neg_3:0 "Seljuk Stability"
+
+ DAMIETTA_FOREIGN_QUARTER_MODIFIER:0 "Foreign Quarter"
+
+ damietta_byz_caved_to_papal_pressure:0 "Caved to Papal Pressure"
+ damietta_byz_refused_to_return_land_modifier:0 "Refused Land Return Request"
+
