@@ -4,6 +4,7 @@ v0.1:
 + Added Thessalonica (FES)
 + Added start screen text for Damietta
 
+* Cleaned up the Foreign Quarter event for Crusader States
 * Added Serbian to Prilep's accepted cultures to reflect that Prilep was born out of the Serbian Empire
 * Edited bookmark text to actually explain the lore of the mod
 * Damietta and Jerusalem are now allies at game start and the KoJ now guarantees Tripoli
